#8: Fixing tests Plus small bugfix